projects/microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /currency-exchange/
        pathType: Prefix
        backend:
          service:
           name: currency-exchange
           port:
              number: 8000     
      - path:  /currency-conversion/
        pathType: Prefix
        backend:
          service: 
           name: currency-conversion
           port:
              number: 8100
